@@ -1,6 +1,7 @@
 from ucommon 5.0.5 to 5.0.6
 - generic object save/auto-restore.
 - separation of shell::error() from shell::errexit(0,...)
+- separation of runtime and non-runtime libs
 
 from ucommon 5.0.4 to 5.0.5
 - fix for commoncpp emulation when no direct parent commoncpp thread.
